lang/parser/src/tests/snapshots/flylang_parser__tests__addition.snap
---
source: parser/src/tests/mod.rs
expression: code
---
Ok(
    [
        Expr(
            Spanned(
                Add(
                    Spanned(
                        Number(
                            "2",
                        ),
                        0..1,
                    ),
                    Spanned(
                        Number(
                            "4",
                        ),
                        4..5,
                    ),
                ),
                0..5,
            ),
        ),
    ],
)
