lang/parser/src/tests/snapshots/flylang_parser__tests__advanced_props.snap
---
source: parser/src/tests/mod.rs
expression: code
---
Ok(
    [
        Expr(
            Spanned(
                Assignment {
                    name: Spanned(
                        Identifier(
                            "ninja",
                        ),
                        1..6,
                    ),
                    value: Spanned(
                        Call {
                            callee: Spanned(
                                Identifier(
                                    "Character",
                                ),
                                9..18,
                            ),
                            parameters: [],
                        },
                        19..20,
                    ),
                },
                1..20,
            ),
        ),
        Expr(
            Spanned(
                Assignment {
                    name: Spanned(
                        PropertyAccess {
                            origin: Spanned(
                                Identifier(
                                    "ninja",
                                ),
                                22..27,
                            ),
                            property: Spanned(
                                Identifier(
                                    "first_name",
                                ),
                                28..38,
                            ),
                        },
                        22..38,
                    ),
                    value: Spanned(
                        String(
                            "Lloyd",
                        ),
                        41..47,
                    ),
                },
                22..47,
            ),
        ),
        Expr(
            Spanned(
                Assignment {
                    name: Spanned(
                        PropertyAccess {
                            origin: Spanned(
                                Identifier(
                                    "ninja",
                                ),
                                49..54,
                            ),
                            property: Spanned(
                                Identifier(
                                    "middle_name",
                                ),
                                55..66,
                            ),
                        },
                        49..66,
                    ),
                    value: Spanned(
                        String(
                            "Montgomery",
                        ),
                        69..80,
                    ),
                },
                49..80,
            ),
        ),
        Expr(
            Spanned(
                Assignment {
                    name: Spanned(
                        PropertyAccess {
                            origin: Spanned(
                                Identifier(
                                    "ninja",
                                ),
                                82..87,
                            ),
                            property: Spanned(
                                Identifier(
                                    "last_name",
                                ),
                                88..97,
                            ),
                        },
                        82..97,
                    ),
                    value: Spanned(
                        String(
                            "Garmadon",
                        ),
                        100..109,
                    ),
                },
                82..109,
            ),
        ),
        Expr(
            Spanned(
                Assignment {
                    name: Spanned(
                        PropertyAccess {
                            origin: Spanned(
                                PropertyAccess {
                                    origin: Spanned(
                                        Identifier(
                                            "ninja",
                                        ),
                                        112..117,
                                    ),
                                    property: Spanned(
                                        Identifier(
                                            "gi",
                                        ),
                                        118..120,
                                    ),
                                },
                                112..120,
                            ),
                            property: Spanned(
                                Identifier(
                                    "color",
                                ),
                                121..126,
                            ),
                        },
                        112..126,
                    ),
                    value: Spanned(
                        PropertyAccess {
                            origin: Spanned(
                                Identifier(
                                    "GiColor",
                                ),
                                129..136,
                            ),
                            property: Spanned(
                                Identifier(
                                    "Green",
                                ),
                                137..142,
                            ),
                        },
                        129..142,
                    ),
                },
                112..142,
            ),
        ),
    ],
)
