lang/parser/src/tests/snapshots/flylang_parser__tests__error_01.snap
---
source: lang/parser/src/tests/mod.rs
expression: code
---
Err(
    UnexpectedToken {
        token: Token {
            value: Comma,
            address: <Address `<test>`: 2..3>,
        },
        expected: None,
    },
)
