lang/parser/src/tests/snapshots/flylang_parser__tests__error_02.snap
---
source: lang/parser/src/tests/mod.rs
expression: code
---
Err(
    UnexpectedEOF(
        <Address `<test>`: 10..11>,
    ),
)
