lang/parser/src/tests/snapshots/flylang_parser__tests__error_03.snap
---
source: lang/parser/src/tests/mod.rs
expression: code
---
Err(
    UnexpectedToken {
        token: Token {
            value: Assign,
            address: <Address `<test>`: 1..2>,
        },
        expected: None,
    },
)
