lang/parser/src/tests/snapshots/flylang_parser__tests__error_private_static_variable.snap
---
source: lang/parser/src/tests/mod.rs
expression: code
---
Err(
    StaticNotAllowedHere {
        static_keyword_addr: <Address `<test>`: 9..15>,
    },
)
