lang/parser/src/tests/snapshots/flylang_parser__tests__error_static_variable.snap
---
source: lang/parser/src/tests/mod.rs
expression: code
---
Err(
    StaticNotAllowedHere {
        static_keyword_addr: <Address `<test>`: 1..7>,
    },
)
